# gamelad

./: .gitignore  Cargo.toml  README.md  opcodes.xcf
asm/: makefile
asm/src/: jmp_addr.s  load_immediate.s  load_reg.s
src/: cpu.rs  gamelad.rs  lib.rs  main.rs
src/cpu/: mbc.rs  memory_range.rs  opcodes.rs  registers.rs
