[package]
name = "gamelads"
version = "0.1.0"
authors = ["Josh"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#winit     = "0.20.0"
#ash       = "0.29.0"
num-traits = "0.2"
num-derive = "0.3"
num = "0.4"
sdl2 = "*"
